# tax

./: CMakeLists.txt  Dockerfile
.github/workflows/: docker.yml
src/: hard.cpp  hard.hpp  main.cpp  quantam.cpp  quantam.hpp  rate.cpp  rate.hpp  response.cpp  response.hpp  sorry.cpp  sorry.hpp  wish.cpp  wish.hpp
